@@ -1,3 +1,5 @@
+* Remove starting wildcard when searching on codes and numbers
+
 Version 5.0.0 - 2018-10-01
 * Bug fixes (see mercurial logs for details)
 * Remove support for Python 2.7
